RESOLVED FIXED193805
WKWebView.goBack should reload if there is a safe browsing warning
https://bugs.webkit.org/show_bug.cgi?id=193805
Summary WKWebView.goBack should reload if there is a safe browsing warning
Alex Christensen
Reported 2019-01-24 18:41:57 PST
WKWebView.goBack should reload if there is a safe browsing warning
Attachments
Patch (7.93 KB, patch)
2019-01-24 18:44 PST, Alex Christensen
ggaren: review+
Alex Christensen
Comment 1 2019-01-24 18:44:59 PST
Alex Christensen
Comment 2 2019-01-24 18:45:02 PST
Geoffrey Garen
Comment 3 2019-01-25 11:36:37 PST
Comment on attachment 360067 [details] Patch r=me
Alex Christensen
Comment 4 2019-01-25 11:42:41 PST
Note You need to log in before you can comment on or make changes to this bug.