Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm
@@ -1008,6 +1008,8 @@ static void validate(WKWebViewConfiguration *configuration)
 
 - (WKNavigation *)goBack
 {
+    if (self._safeBrowsingWarning)
+        return [self reload];
     return wrapper(_page->goBack());
 }
 
